fix: pepe jump

--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ main {
         height: 70px;
         border-radius: 10px;
         background-color: rgba(221, 232, 235);
-        font-family: "Courier New", Courier, monospace;
+        font-family: "Inter", sans-serif;
+        _font-family: "Courier New", Courier, monospace;
         font-size: 16px;
     }
 
